--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cross-env": "7.0.3",
     "eslint": "8.0.1",
     "jest": "27.3.1",
+    "knex-cleaner": "^1.3.1",
     "supertest": "6.1.6"
   },
   "dependencies": {
